--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="refresh" content="0; url=templates/">
+  <meta http-equiv="refresh" content="0; url=./templates/">
   <title>Redirection…</title>
 </head>
 <body>
